src/test/ui/parser/mismatched-braces/missing-close-brace-in-struct.stderr
error: this file contains an un-closed delimiter
  --> $DIR/missing-close-brace-in-struct.rs:14:66
   |
LL | pub(crate) struct Bar<T> {
   |                          - un-closed delimiter
...
LL | fn main() {}
   |                                                                  ^

error: expected identifier, found keyword `trait`
  --> $DIR/missing-close-brace-in-struct.rs:4:1
   |
LL | trait T {
   | ^^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL | r#trait T {
   | ^^^^^^^

error: expected `:`, found `T`
  --> $DIR/missing-close-brace-in-struct.rs:4:7
   |
LL | trait T {
   |       ^ expected `:`

error[E0601]: `main` function not found in crate `missing_close_brace_in_struct`
  --> $DIR/missing-close-brace-in-struct.rs:1:1
   |
LL | / pub(crate) struct Bar<T> {
LL | |   foo: T,
LL | |
LL | | trait T {
...  |
LL | |
LL | | fn main() {}
   | |_________________________________________________________________^ consider adding a `main` function to `$DIR/missing-close-brace-in-struct.rs`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0601`.
